// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task archived 1`] = `
<div
  className="list-item ARCHIVED_TASK"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Todo first task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Todo first task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <button
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Task pinned 1`] = `
<div
  className="list-item PINNED_TASK"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Todo first task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <button
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </button>
  </div>
</div>
`;
